--- a/day10/about.html
+++ b/day10/about.html
@@ -6,19 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>pershendetje</h1>
-    <header>
-        <nav>
-            <ul>
-    <a href="home.html"> <li>home</li></a>
-    <a href="index.html"><li>about</li></a>
-    <a href="service.html"><li>service</li></a>
-    <header>
-        <nav>
-            <ul> 
-                
-
-    <h1>kjo eshte about</h1>
-
+    <nav>
+        <ul>
+            <a href="index.html"> <li>home</li></a>
+            <a href="about.html"><li> about</li></a>
+            <a href="contact.html"><li> contact</li></a>
+        </ul>
+    </nav>
 </body>
 </html>
