--- a/day16/index.html
+++ b/day16/index.html
@@ -32,7 +32,39 @@
       <div class="desc">description of the image</div>
      </div>
 
+     
      <div class="sprite city1"></div>
      <div class="sprite city2"></div>
-</body>
+
+     <a href="https://shkolladigjitale.com/">digital school</a>
+
+     <p class="ds paragraph">paragraph 1</p>
+     <p class="ds_paragraph">paragraph 2</p>
+     <p class="paragraph">paragraph 3</p>
+     
+     <br><br>
+
+     <div id="ds div">div 1</div>
+     <div id="ds_div">div 2</div>
+     <div id="div ds">div 3</div>
+     <div id="div4">div 4</div>
+
+     <br><br>
+
+     <img src="image4.webp" title="canyons" width="200"height="200">
+     <img src="beache.jpg" title="blue sky" width="200"height="200">
+     <img src="image3.jpg" title="blue_ocean" width="200"height="200">
+     <img src="image2.jpg" title="river blue" width="200"height="200">
+
+     <br><br>
+
+     <h1 class="heading-1">heading 1</h1>
+     <h2 class="heading_2">heading 2</h2>
+     <h3 class="heading 3">heading 3</h3>
+
+     <br><br>
+
+     <input type="text" name="firstname" placeholder="firstname"><br><br>
+     <input type="text" name="last name" placeholder="last name"><br><br>
+</body><input type="number" name="age" placeholder="age" readonly><br><br>
 </html>
