--- a/day17/index.html
+++ b/day17/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <div class="dropdown">
+      <span>mouse over me</span>
+      <div class="dropdown-content">
+             <p>hello world</p>
+        </div>
+    </div>
+
+    <br>
+    <br>
+    <br>
+
+    <div class="tooltip">hover over me
+        <span class="tooltip-text">tooltip-text</span>
+    </div>
 </body>
 </html>
