--- a/day 20/index.html
+++ b/day 20/index.html
@@ -55,5 +55,43 @@
             </div>
         </div>
     </section>
+    <section id="section-3">
+        <div class="container">
+            <div class="title-box">
+                <h2>GET IN TOUCH</h2>
+                <div class="line"></div>
+                <p>10000, Prishtina, Kosovo, Tel: (383) 8754-623</p>
+            </div>
+        </div id="contact-form">
+              <form>
+                <div class="form-row">
+                <input type="text" name="email" placeholder="your name">
+                 <input type="email" name="email"placeholder="your email">
+              </div>
+              <div class="form-row">
+                <textarea name="message" placeholder="Your message"></textarea>
+              </div>
+              <div class="form-row">
+                <input type="submit" class="big-button" value="send message"> 
+              </div>
+              </form>
+        </div>
+    </div>
+    </section>
+    <footer>
+        <div class="container">
+            <div class="footer-links">
+                <ul>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Google</a></li>
+                    <li><a href="#">Linkedin</a></li>
+                    <li><a href="#">Behance</a></li>
+                    <li><a href="#">Github</a></li>
+                    <li><a href="#">Dribble</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
