--- a/personal project/about.html
+++ b/personal project/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
 
 </head>
 <body>
@@ -19,9 +19,44 @@
     </header>
     <h1>Restaurant Vexi</h1>
     <h2>pizza</h2>
-    <h3><img src="photo2.webp" alt="" width="160px"> <br> pizza margarita  8€</h3>
-    <h3> <img src="photo 3.jpg" alt="" width="200px"> <br>  pizza shtepie  12€</h3>
-    <h3> <img src="photo 4.jpg" alt="" width="139px"> <br> pizza peperoni  10€</h3>
-    <h3> <img src="photo 5.webp" alt="" width="140px"> <br> pizza vegjetariane  12€</h3>
+    <h3>pizza margarita  8€</h3>
+    <h3>pizza shtepie  12€</h3>
+    <h3>pizza peperoni  10€</h3>
+    <h3> pizza vegjetariane  12€</h3>
+    <br>
+    <br>
+    <h2>pasta</h2>
+    <h3>pasta bolognese 7€</h3>
+    <h3>pasta arribbiata 10€</h3>
+    <h3>pasta marinara 8€</h3>
+    <h3>pasta ragu 8€</h3>
+    <br>
+    <br>
+    <h2>salad</h2>
+    <h3>caesar salad 6€</h3>
+    <h3>greek salad 7€</h3>
+    <h3>waldorf salad 8€</h3>
+    <h3>garden salad 5€</h3>
+    <br>
+    <br>
+    <h2>drinks</h2>
+    <h3>coca cola 2€</h3>
+    <h3>fanta 2€</h3>
+    <h3>water 1€</h3>
+    <h3>beer 4€</h3>
+    <h3>orange juice 3€</h3>
+    <h3>apple juice 3€</h3>
+    <h3>coffe 2.5€</h3>
+    <h3>tea 1.8€</h3>
+    <br>
+    <br>
+    <h2>dessert</h2>
+    <h3>tiramisu 5€</h3>
+    <h3>ice cream 4€</h3>
+    <h3>cake 5€</h3>
+    <h3>fruit salad 4€</h3>
+    <h3>chocolate cake 6€</h3>
+    
+
 </body>
 </html>
