--- a/personal project/contact.html
+++ b/personal project/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="contact.css">
 
 </head>
 <body>
@@ -12,10 +12,11 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html"><Menu></Menu></a></li>
+            <li><a href="about.html">menu</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     </header>
+    <h2>For reservations, contact +383 48 834 739</h2>
 </body>
 </html>
