--- a/personal project/about.html
+++ b/personal project/about.html
@@ -24,33 +24,54 @@
     
     <h1>Restaurant Vexi</h1>
     <h2>pizza</h2>
+    <img src="pizza.jpg" alt="" width="200px" height="200px">
+    <img src="peperoni.webp" alt="" width="200px" height="200px">
+    <img src="pizza tuna.jpg" alt="" width="200px" height="200px">
+    <img src="mushroom pizza.jpg" alt="" width="200px" height="200px">
     <h3>pizza margarita  8€</h3> 
     <h3>pizza peperoni  10€</h3>
-    <img src="pizza.jpg" alt="" width="200px" height="200px"> <img src="peperoni.webp" alt="" width="200px" height="200px">
+    <h3>pizza tuna 10€</h3>
+    <h3>pizza mushroom 9€</h3>
     <br>
     <br>
     <h2>pasta</h2>
+    <img src="bolognese.jpg" alt="" width="200px" height="200px"> 
+    <img src="arr.jpg" alt="" width="200px" height="200px">
+    <img src="shrimp pasta.jpg" alt="" width="200px" height="200px">
+    <img src="spinach pasta.jpg" alt="" width="200px" height="200px">
     <h3>pasta bolognese 7€</h3>
     <h3>pasta arribbiata 10€</h3>
-    <img src="bolognese.jpg" alt="" width="200px" height="200px"> <img src="arr.jpg" alt="" width="200px" height="200px">
+    <h3>pasta shrimp 15€</h3>
+    <h3>pasta spinach 8€</h3>
     <br>
     <br>
     <h2>salad</h2>
+    <img src="greek.jpg" alt="" width="200px" height="200px">
+     <img src="garden.jpg" alt="" width="200px" height="200px">
+     <img src="cobb salad.jpg" alt="" width="200px" height="200px">
     <h3>greek salad 7€</h3>
     <h3>garden salad 5€</h3>
-    <img src="greek.jpg" alt="" width="200px" height="200px"> <img src="garden.jpg" alt="" width="200px" height="200px">
+    <h3>cobb salad 10€</h3>
     <br>
     <br>
     <h2>drinks</h2>
+    <img src="coca.jpg" alt="" width="200px" height="200px"> 
+    <img src="coffe.jpg" alt="" width="200px" height="200px">
+    <img src="fanta.jpg" alt="" width="200px" height="200px">
+    <img src="water.webp" alt="" width="200px" height="200px">
     <h3>coca cola 2€</h3>
     <h3>coffe 2.5€</h3>
-    <img src="coca.jpg" alt="" width="200px" height="200px"> <img src="coffe.jpg" alt="" width="200px" height="200px">
+    <h3>fanta 2€</h3>
+    <h3>water 1.5€</h3>
     <br>
     <br>
     <h2>dessert</h2>
+    <img src="ice.jpg" alt="" width="200px" height="200px">
+    <img src="cake.jpg" alt="" width="200px" height="200px">
+    <img src="macarons.jpg" alt="" width="200px" height="200px">
     <h3>ice cream 4€</h3>
     <h3>cake 5€</h3>
-    <img src="ice.jpg" alt="" width="200px" height="200px"> <img src="cake.jpg" alt="" width="200px" height="200px">
+    <h3>macarons 2€ apeace</h3>
     <button class="btn btn-hover">Order Now</button>
     <footer>
         @Copyright 2025 - Uvjes Azizi
