--- a/personal project/index.html
+++ b/personal project/index.html
@@ -16,13 +16,17 @@
         </ul>
     </nav>
 </header>
-    <p id="p1">Welcome to our restaurant</p>
-    
+
+<p class="welcome">Welcome to our restaurant</p>
+
     
 
-    <footer>
-        @Copyright 2025 - Uvjes Azizi
-    </footer>
+<footer class="site-footer">
+    &copy; 2025 - Uvjes Azizi
+  </footer>
 
-</body>
-</html>
+  <section class="about-section">
+    <h2>About Us</h2>
+    <p>At Vexi, we’re all about flavor, fire, and family. We serve handcrafted dishes made with love and the finest ingredients. Whether you're craving something spicy or something classic, we've got a seat waiting for you.</p>
+  </section>
+  
